refactor ai_processor

--- a/notebooks/services/ai_trial.ipynb
+++ b/notebooks/services/ai_trial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "10aed708",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7b47cf5e",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "f1cd2725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processor = AIprocessor(\n",
+    "    base_url=BASE_URL, \n",
+    "    api_key=os.getenv(\"API_KEY\"), \n",
+    "    client=os.getenv(\"CLIENT_ID\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d25c7298",
    "metadata": {},
    "outputs": [
@@ -72,23 +85,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Here are the valid capital-city and country pairs from the list:\\n\\n1. Paris, France\\n2. Rome, Italy\\n3. Berlin, Germany\\n4. Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 37, 'prompt_tokens': 50, 'total_tokens': 87, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-BxBQ4MuOz1xmp1b71CklRPI5Gu3E5', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--034bfb3b-f567-46ad-bc78-df4c49dece89-0' usage_metadata={'input_tokens': 50, 'output_tokens': 37, 'total_tokens': 87, 'input_token_details': {}, 'output_token_details': {}}\n"
+      "content='Here are the valid capital-city and country pairs from the list:\\n\\n1. Paris, France\\n2. Rome, Italy\\n3. Berlin, Germany\\n4. Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 37, 'prompt_tokens': 50, 'total_tokens': 87, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-ByJdOUjiDjrdXoJHm2OBY2J8PX4B3', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--57abd9bb-0516-40f1-890d-6c4f18faf924-0' usage_metadata={'input_tokens': 50, 'output_tokens': 37, 'total_tokens': 87, 'input_token_details': {}, 'output_token_details': {}}\n"
      ]
     }
    ],
    "source": [
-    "base = BASE_URL\n",
-    "client = os.getenv(\"CLIENT_ID\") # Client ID\n",
-    "apikey = os.getenv(\"API_KEY\") # API Key\n",
-    "\n",
-    "processor = AIprocessor(\n",
-    "    base_url= f\"{base}/model-orchestrator/api/{client}\",\n",
-    "    api_key=apikey,\n",
-    "    deployment_name=\"gpt-4o-dev-default\",\n",
-    "    model=\"gpt-4\"\n",
-    ")\n",
-    "\n",
-    "\n",
+    "# Can specigy model, defaults to gpt-4\n",
     "response = processor.gpt_completion(\n",
     "    system_prompt=\"You will receive a list of cities and countries in the user message. Your job is to extract valid capital-city and country pairs\",\n",
     "    user_prompt=\"paris rome valencia madrid germany berlin tolouse madrid italy france\",\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1211ab0c",
    "metadata": {},
    "outputs": [],
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a726dcfb",
    "metadata": {},
    "outputs": [
@@ -133,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'responses': [{'city': 'Paris', 'country': 'France'}, {'city': 'Rome', 'country': 'Italy'}, {'city': 'Berlin', 'country': 'Germany'}]}\n"
+      "{'responses': [{'city': 'Paris', 'country': 'France'}, {'city': 'Rome', 'country': 'Italy'}, {'city': 'Berlin', 'country': 'Germany'}, {'city': 'Madrid', 'country': 'Spain'}]}\n"
      ]
     }
    ],
