--- a/notebooks/services/ai_trial.ipynb
+++ b/notebooks/services/ai_trial.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f1cd2725",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d25c7298",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Here are the valid capital-city and country pairs from the list:\\n\\n1. Paris, France\\n2. Rome, Italy\\n3. Berlin, Germany\\n4. Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 37, 'prompt_tokens': 50, 'total_tokens': 87, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-ByJdOUjiDjrdXoJHm2OBY2J8PX4B3', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--57abd9bb-0516-40f1-890d-6c4f18faf924-0' usage_metadata={'input_tokens': 50, 'output_tokens': 37, 'total_tokens': 87, 'input_token_details': {}, 'output_token_details': {}}\n"
+      "content='Here are the valid capital-city and country pairs from the list:\\n\\n- Paris, France\\n- Rome, Italy\\n- Berlin, Germany\\n- Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 33, 'prompt_tokens': 50, 'total_tokens': 83, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-ByKNb55uo6Z9myz0WFpLpxo6Mrvp9', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--e1bdf1e2-faaf-4093-9345-821995c1c195-0' usage_metadata={'input_tokens': 50, 'output_tokens': 33, 'total_tokens': 83, 'input_token_details': {}, 'output_token_details': {}}\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1211ab0c",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a726dcfb",
    "metadata": {},
    "outputs": [
@@ -141,6 +141,26 @@
    ],
    "source": [
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb21ab3c",
+   "metadata": {},
+   "source": [
+    "Example usage: Getting the embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86dab569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = processor.get_embeddings(\n",
+    "    input_text=\"paris rome valencia madrid germany berlin tolouse madrid italy france\"\n",
+    ")"
    ]
   }
  ],
