refactors services/utils

--- a/notebooks/services/ai_processor.ipynb
+++ b/notebooks/services/ai_processor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "10aed708",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,13 @@
     "    sys.path.insert(0, project_root)\n",
     "\n",
     "# Now you can import\n",
-    "from src.services.ai_processor import AIprocessor\n",
+    "from src.services.ai_processor import AIProcessor\n",
     "from models.pydantic_classes import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "7b47cf5e",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f1cd2725",
    "metadata": {},
    "outputs": [],
    "source": [
-    "processor = AIprocessor(\n",
+    "processor = AIProcessor(\n",
     "    base_url=BASE_URL, \n",
     "    api_key=os.getenv(\"API_KEY\"), \n",
     "    client=os.getenv(\"CLIENT_ID\"))"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "d25c7298",
    "metadata": {},
    "outputs": [
@@ -85,15 +85,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Here are the valid capital-city and country pairs from the list:\\n\\n- Paris, France\\n- Rome, Italy\\n- Berlin, Germany\\n- Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 33, 'prompt_tokens': 50, 'total_tokens': 83, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-ByKNb55uo6Z9myz0WFpLpxo6Mrvp9', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--e1bdf1e2-faaf-4093-9345-821995c1c195-0' usage_metadata={'input_tokens': 50, 'output_tokens': 33, 'total_tokens': 83, 'input_token_details': {}, 'output_token_details': {}}\n"
+      "content='Here are the valid capital-city and country pairs from the list:\\n\\n- Paris, France\\n- Rome, Italy\\n- Berlin, Germany\\n- Madrid, Spain' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 33, 'prompt_tokens': 50, 'total_tokens': 83, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-dev-default', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-Bz1FeBmIlaYpJu0D9jnadgBYpim77', 'service_tier': None, 'finish_reason': 'Stop', 'logprobs': None, 'content_filter_results': {}} id='run--95b07580-d262-4b4d-bb85-b154b140548e-0' usage_metadata={'input_tokens': 50, 'output_tokens': 33, 'total_tokens': 83, 'input_token_details': {}, 'output_token_details': {}}\n"
      ]
     }
    ],
    "source": [
     "# Can specigy model, defaults to gpt-4\n",
-    "response = processor.gpt_completion(\n",
+    "response = processor.generate_completion(\n",
     "    system_prompt=\"You will receive a list of cities and countries in the user message. Your job is to extract valid capital-city and country pairs\",\n",
     "    user_prompt=\"paris rome valencia madrid germany berlin tolouse madrid italy france\",\n",
+    "    model=\"gpt-4o\",\n",
     "    temperature=0,\n",
     "    max_tokens=1000\n",
     ")\n",
@@ -111,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1211ab0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = processor.gpt_completion(\n",
+    "response = processor.generate_completion(\n",
     "    system_prompt=\"You will receive a list of cities and countries in the user message. Your job is to extract valid capital-city and country pairs\",\n",
     "    user_prompt=\"paris rome valencia madrid germany berlin tolouse madrid italy france\",\n",
     "    pydantic_schema=Response,\n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "a726dcfb",
    "metadata": {},
    "outputs": [
@@ -135,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'responses': [{'city': 'Paris', 'country': 'France'}, {'city': 'Rome', 'country': 'Italy'}, {'city': 'Berlin', 'country': 'Germany'}, {'city': 'Madrid', 'country': 'Spain'}]}\n"
+      "{'response': [{'city': 'Paris', 'country': 'France'}, {'city': 'Rome', 'country': 'Italy'}, {'city': 'Berlin', 'country': 'Germany'}]}\n"
      ]
     }
    ],
@@ -158,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = processor.get_embeddings(\n",
+    "response = processor.generate_embeddings(\n",
     "    input_text=\"paris rome valencia madrid germany berlin tolouse madrid italy france\"\n",
     ")"
    ]
