--- a/notebooks/services/document_operations.ipynb
+++ b/notebooks/services/document_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "421f96e0",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "87853087",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ee8125c4",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2a43d135-fd22-4aac-95ca-b5d2503bfb4f\n"
+      "469207c0-1a2c-4d0f-b89b-d09cfbb7536e\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
     "    api_key= os.getenv(\"API_KEY\") # API Key\n",
     ")\n",
     "\n",
-    "doc_id = doc_ops.upload_document(\"HDFC-Life-Guaranteed-Income-Insurance-Plan-Policy-Bond.pdf\")\n",
+    "doc_id = doc_ops.upload_doc(\"HDFC-Life-Guaranteed-Income-Insurance-Plan-Policy-Bond.pdf\")\n",
     "print(doc_id)"
    ]
   },
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9c6a11df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_content = doc_ops.get_document(doc_id)\n"
+    "doc_content = doc_ops.get_doc(doc_id)\n"
    ]
   },
   {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "cfe88dda",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
     }
    ],
    "source": [
-    "doc_content_text = DocumentOperations.extract_text_from_pdf(doc_content)\n",
+    "doc_content_text = doc_ops.extract_text(doc_content)\n",
     "print(doc_content_text)"
    ]
   },
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "765fc5f4",
    "metadata": {},
    "outputs": [
@@ -1928,34 +1928,16 @@
     }
    ],
    "source": [
-    "doc_content_json = DocumentOperations.extract_text_from_pdf_json(doc_content)\n",
+    "doc_content_json = doc_ops.extract_text_json(doc_content)\n",
     "print(doc_content_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3f7c4423",
+   "execution_count": null,
+   "id": "91aef544",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "HTTPError",
-     "evalue": "HTTP error during semantic search: 400 - {\"type\":\"Bad Request\",\"title\":\"Error\",\"status\":400,\"detail\":\"Requested index is not configured for the client\",\"instance\":\"POST /api/middlemarketgb/indexes/default_semantic_search_index/search\",\"requestId\":\"0HNEBE2JI9575:00000001\",\"traceId\":\"00-a0961f41d85169822e829bacd3f010d3-281d8006d7e1ae04-01\"}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\services\\document_operations.py:194\u001b[39m, in \u001b[36mDocumentOperations.semantic_search\u001b[39m\u001b[34m(self, query, document_ids, search_index_name, search_index_version, embedding_deployment_name, embedding_model, vector_dimensions, k_nearest_neighbors, threshold, skip, take)\u001b[39m\n\u001b[32m    193\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m194\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    195\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\.venv\\Lib\\site-packages\\requests\\models.py:1026\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1025\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response=\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[31mHTTPError\u001b[39m: 400 Client Error: Bad Request for url: https://dev.aiplatform.sompo-intl.com//semantic-search/api/middlemarketgb/indexes/default_semantic_search_index/search?indexVersion=3",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m results = \u001b[43mdoc_ops\u001b[49m\u001b[43m.\u001b[49m\u001b[43msemantic_search\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mquery\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTheft Coverage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdocument_ids\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdoc_id\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(results)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\services\\document_operations.py:196\u001b[39m, in \u001b[36mDocumentOperations.semantic_search\u001b[39m\u001b[34m(self, query, document_ids, search_index_name, search_index_version, embedding_deployment_name, embedding_model, vector_dimensions, k_nearest_neighbors, threshold, skip, take)\u001b[39m\n\u001b[32m    194\u001b[39m     response.raise_for_status()\n\u001b[32m    195\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m--> \u001b[39m\u001b[32m196\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m requests.HTTPError(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mHTTP error during semantic search: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me.response.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m - \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me.response.text\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01me\u001b[39;00m\n\u001b[32m    198\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    199\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response.json()\n",
-      "\u001b[31mHTTPError\u001b[39m: HTTP error during semantic search: 400 - {\"type\":\"Bad Request\",\"title\":\"Error\",\"status\":400,\"detail\":\"Requested index is not configured for the client\",\"instance\":\"POST /api/middlemarketgb/indexes/default_semantic_search_index/search\",\"requestId\":\"0HNEBE2JI9575:00000001\",\"traceId\":\"00-a0961f41d85169822e829bacd3f010d3-281d8006d7e1ae04-01\"}"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = doc_ops.semantic_search(\n",
     "    query=\"Theft Coverage\",\n",
